fix z-index of footer

--- a/web/settings/settings_style.css
+++ b/web/settings/settings_style.css
@@ -31,6 +31,7 @@ body > .container {
     width: 100%;
     height: 30px; /* fixed height of footer */
     line-height: 30px; /* vertically center the text there */
+    z-index: 1030; /* same as menue */
 }
 
 h1 {
